[gd_scene load_steps=2 format=3 uid="uid://d2qfx6s1o6n7e"]

[ext_resource type="Script" path="res://bubbleridehud.gd" id="1_k5p1i"]

[node name="bubbleridehud" type="CanvasLayer"]
script = ExtResource("1_k5p1i")

[node name="Score" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 64
text = "Score:"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -156.0
offset_top = -152.0
offset_right = 156.445
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "START"

[node name="Instructions" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -558.5
offset_top = -135.0
offset_right = 558.5
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 14
theme_override_font_sizes/font_size = 64
text = "Avoid the obstacles!
Hold [SPACEBAR] or [LEFTCLICK]
to hover up! let go to fall!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="GameOver" type="Label" parent="."]
offset_left = 682.0
offset_top = 444.0
offset_right = 1249.0
offset_bottom = 623.0
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 64
text = "Game over!
Back to scrubbing!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
